[package]
name = "cuda-budget"
version = "0.1.0"
edition = "2021"
description = "Resource budgeting — computation limits, priority scheduling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-budget"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
